Don't allow closing hidden document views without confirmation

The original fix was supposed to ease the multimonitor layouts somehow,
but it seems like the feature is just broken and this check does not
really change much.

BUG:474396

Original bug whose fix caused the issue:
CCBUG:392930